fix spacing between cards

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -33,6 +33,6 @@
 }
 
 .card-link {
-  margin: 0px 30px;
+  margin: 0px auto;
   width: 190px;
 }
